server/7.6/manage/manage-nodes/list-cluster-nodes.md
---
title: List Cluster Nodes
description: The nodes of a cluster can be listed, and details on each retrieved.
pubDate: 2026-08-17T09:53:44.266Z
antora:
  editUrl: https://github.com/couchbase/docs-server/edit/release/7.6/modules/manage/pages/manage-nodes/list-cluster-nodes.adoc
  xref: xref:7.6@server:manage:manage-nodes/list-cluster-nodes.adoc[]
---

[Consult the llms.txt file for a full list of contents](/llms.txt)
[View original HTML](/server/7.6/manage/manage-nodes/list-cluster-nodes.html)

# List Cluster Nodes

> The nodes of a cluster can be listed, and details on each retrieved. 

## [](#listing-nodes)Listing Nodes

Couchbase Server allows the nodes of a cluster to be listed, and data retrieved on each.

## [](#examples-on-this-page-node-listing)Examples on This Page

The examples in the subsections below show how the nodes of the same cluster can be listed, using the [UI](#list-nodes-with-the-ui), the [CLI](#list-nodes-with-the-cli), and the [REST API](#list-nodes-with-the-rest-api) respectively.

The examples assume:

* A two-node cluster already exists; as at the conclusion of [Join a Cluster and Rebalance](join-cluster-and-rebalance.md).
* The cluster has the Full Administrator username of `Administrator`, and password of `password`.

## [](#list-nodes-with-the-ui)List Nodes with the UI

All nodes in the current cluster can be viewed on the **Servers** screen of Couchbase Web Console. Note that this display is identical for all nodes in the cluster: therefore, whether you open the console on node one or node two of a two-node cluster, the same information is provided.

Proceed as follows:

1. Access the Couchbase Web Console **Servers** screen, on either node `10.142.181.101` or node `101.142.181.102`, by left-clicking on the **Servers** tab in the left-hand navigation bar. The display is as follows:  
![twoNodeClusterAfterRebalanceCompressedView](../_images/manage-nodes/twoNodeClusterAfterRebalanceCompressedView.png)  
This indicates that the cluster currently consists of the nodes `10.142.181.101` and `101.142.181.102`. Each row provides the following details:

  * **name**: The name of the node. In this case, each node is named after its IP address.
  * **group**: The _Group_ occupied by the node. For information, see [Server Group Awareness](../../learn/clusters-and-availability/groups.md).
  * **services**: The _services_ running on the node. For information, see [Services](../../learn/services-and-indexes/services/services.md).
  * **CPU**: The percentage of available CPU resources currently occupied.
  * **RAM**: The percentage of available RAM currently occupied. For information on Couchbase memory-management, see [Memory](../../learn/buckets-memory-and-storage/memory.md).
  * **swap**: The percentage of available swap space in use.
  * **disk used**: The amount of disk space currently used, in megabytes.
  * **items**: The number of _active_ and _replica_ items currently on the node, in thousands. If the figure is `15.2 K/15.8 K`, this indicates that 15.2 K items are in active vBuckets on the node, and 15.8 in replica. For information on vBuckets, see [vBuckets](../../learn/buckets-memory-and-storage/vbuckets.md).
2. To see further details of each node, left-click on the row for the node. The row expands vertically, as follows:  
![twoNodeClusterAfterRebalance](../_images/manage-nodes/twoNodeClusterAfterRebalance.png)  
The additional information now shown includes:

  * **Name**, **Version**, **Uptime**, **OS** version, and Data Service **RAM Quota**.
  * **Storage Paths** for the Data, Index, Eventing, and Analytics services, specified during node-initialization.
  * Currently available memory and disk-space.
3. Left-click on the **Statistics** tab for `10.142.181.101`, at the right-hand side of the row. The **Statistics** screen is displayed. This provides statistics related to each of the buckets on the cluster. These include information on the **Active Data Size**, **Data Total Disk Size**, and **Data Fragmentation**. For more information, see [Monitor with the UI](../monitor/monitor-intro.md).

## [](#list-nodes-with-the-cli)List Nodes with the CLI

To list the nodes of a cluster with the CLI, use the `server-list` command, as follows:

couchbase-cli server-list -c 10.142.181.101:8091 \
--username Administrator \
--password password

The output is as follows:

ns_1@10.142.181.101 10.142.181.101:8091 healthy active
ns_1@10.142.181.102 10.142.181.102:8091 healthy active

On occasions when a node is inactive or failed, output of the following kind is produced:

ns_1@10.142.181.101 10.142.181.101:8091 healthy active
ns_1@10.142.181.102 10.142.181.102:8091 healthy inactiveFailed

Alternatively, the CLI `host-list` command can be used:

couchbase-cli host-list -c 10.142.181.102:8091 --username Administrator --password password

Note that the command above specifies the second node in the cluster: any node-name in the cluster can be used, with the same results. The output is as follows:

10.142.181.101:8091
10.142.181.102:8091

Thus, the command returns a list of IP addresses and Couchbase Web Console port numbers.

For more information, see the command reference for [server-list](../../cli/cbcli/couchbase-cli-server-list.md) and [host-list](../../cli/cbcli/couchbase-cli-host-list.md).

## [](#list-nodes-with-the-rest-api)List Nodes with the REST API

To list all nodes in a cluster by means of the REST API, use the `/pools/default` URI. A Couchbase _pool_ represents computing resources (such as machines, memory, CPU, and disks) that are used to host Couchbase buckets. Couchbase Server clusters support a single pool, named `default`.

The method returns a large amount of information, which includes many of the details used in the Couchbase Web Console `Statistics` panel, described above. The output may be unformatted, and thereby difficult to read until formatting is applied.

The following call passes the result to the [jq](https://stedolan.github.io/jq/) command-line JSON processor for formatting, and then uses the standard command-line utility `egrep` to reduce the output to available hostnames and otpNode names:

curl  -u Administrator:password -v -X GET \
http://10.142.181.101:8091/pools/default | jq '.' | egrep 'hostname|otpNode'

The output is as follows:

"otpNode": "ns_1@10.142.181.101",
"hostname": "10.142.181.101:8091",
"otpNode": "ns_1@10.142.181.102",
"hostname": "10.142.181.102:8091",

As shown in the example REST API command below, the otpNode value can be used with the `/nodes/<otpNode>` URI to retrieve detailed information about the node, including the storage paths for the services:

curl -u Administrator:password -v -X GET \
http://10.142.181.101:8091/nodes/ns_1@10.142.181.101 | jq '.'

For more information, see [Retrieving Cluster Information](../../rest-api/rest-cluster-get.md).

## [](#next-steps-after-list-nodes)Next Steps

Now that you have built a cluster and examined the nodes it contains, learn details on how to [Remove a Node and Rebalance](remove-node-and-rebalance.md).